# mm_template_mnbvc

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
data/: chinaxivlist.txt
data/chinaxiv/202112.00050v1_单栏_文本_表格_docling_output/: 202112.00050v1_单栏_文本_表格.json  202112.00050v1_单栏_文本_表格.md
data/chinaxiv/202112.00050v1_单栏_文本_表格_docling_output/pages/: 202112.00050v1_单栏_文本_表格-page-1.md  202112.00050v1_单栏_文本_表格-page-10.md  202112.00050v1_单栏_文本_表格-page-11.md  202112.00050v1_单栏_文本_表格-page-12.md  202112.00050v1_单栏_文本_表格-page-13.md  202112.00050v1_单栏_文本_表格-page-14.md  202112.00050v1_单栏_文本_表格-page-15.md  202112.00050v1_单栏_文本_表格-page-2.md  202112.00050v1_单栏_文本_表格-page-3.md  202112.00050v1_单栏_文本_表格-page-4.md  202112.00050v1_单栏_文本_表格-page-5.md  202112.00050v1_单栏_文本_表格-page-6.md  202112.00050v1_单栏_文本_表格-page-7.md  202112.00050v1_单栏_文本_表格-page-8.md  202112.00050v1_单栏_文本_表格-page-9.md
scripts/: chinaxiv_convert.py  meeting_convert.py  pdfcontent_convert.py
src/mm_data/core/: file_handlers.py  models.py  processor.py
src/mm_data/core/models/: PDFContent_block.py  chinaxiv_block.py  mmdata_block.py  video_block.py
