[project]
name = "mm-template-mnbvc"
version = "0.1.0"
description = "a multi-modal template for mnbvc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.11.0",
    "loguru",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pillow>=11.2.1",
    "whisperx>=3.3.4",
    "moviepy>=1.0.3",
    "pymupdf>=1.26.3",
]
